# Mercator

./: .gitignore  PLAN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: gen_icon.py
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  lib.rs  main.rs  pty.rs  scan.rs  standard.rs
src/components/: ChatView.tsx  ClaudePanel.tsx  EditorArea.tsx  FileExplorer.tsx  FlowView.tsx  PersonaModal.tsx  SettingsModal.tsx  StatusBar.tsx  TerminalPanel.tsx  TerminalView.tsx  TopBar.tsx  Welcome.tsx
src/lib/: ipc.ts  monaco.ts  settings.ts
